2002-02-13  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/web/protocol.py (_processRequest): added check
	for None to prevent SW barfing on a debug statement

	* SkunkWeb/Services/templating/Handler.py (requestHandler):
	optionally log to error log when there is a 404 (vfs error) and
	raise a 500 for other errors (which weren't supposed to occur, but
	did)

2002-02-13  Andrew Csillag  <drew@thoughttrack.com>

	* pylibs/AE/Cache.py: fix for getPathAndMinistat which broke pretty 
	much everything. 

2002-02-10  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/SkunkWeb/Hooks.py: moved class definitions to a pylib
	(hooks.py) 

2002-02-08  Andrew Csillag  <drew@localhost.localdomain>

	* SkunkWeb 3.2 beta 1 cut and PyDO 1.1 beta 1 cut

2002-02-07  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/sw.conf.in: removed references to pars, which no longer
	works; used @prefix@ instead of hard-coded /usr/local/skunk in a
	number of places; revised documentation of documentRootFS

	* SkunkWeb/Makefile.in (DEMO_FILES): removed a directory name that
	was producing a warning during make install

	* pylibs/AE/Cache.py (Configuration.documentRootFS, 
	_getPathFSAndMinistat): changed documentRootFS from a list
	to a single instance.  Add _getPathAndMinistat, since now
	it is pointless to return the fs, but left a working version
	of _getPathFSAndMinistat, now deprecated.

2002-02-06  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/vfs/vfs.py (PathPropertyStore.acquireWithAncestor): 
	snazzed up acquisition facility by delegating to this method,
	which permits one to search just a segment of a treepath, and
	specify a default or not.

2002-02-05  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/vfs/pickleProps.py: path property store that uses pickle
	files.

	* pylibs/vfs/shelfProps.py (ShelfPathPropertyStore.properties):
	removed haspath(), left in by mistake; switched from gdbm to
	bsddb. 

	* SkunkWeb/Services/sessionHandler/FSSessionStore.py